TEST_PROGRAMS/INVALID/02/badbreakstmt.go
package main

func main(){
    var x = 5;
    var y = 6;

    //break is only for loops
    { 
        println("y not x");
        break;
    }
}
